--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Sample "Hello Universe" Application</title>
+    <title>Sample "Hello Universe" Application anji</title>
   </head>
   <body bgcolor=white>
 
@@ -10,7 +10,7 @@
           <img src="images/1.jpg">
         </td>
         <td>
-          <h1>Hello Prague!</h1>
+          <h1>Hello Prague! anji</h1>
         </td>
       </tr>
     </table>
